--- a/application/package.json
+++ b/application/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "i18next": "^21.8.10",
+    "leo-profanity": "^1.5.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
