--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "install": "make install",
     "start-backend": "make start-backend",
-    "start-frontend": "make start-frontend"
+    "start-frontend": "make start-frontend",
+    "start": "make start-backend & make start-frontend"
   },
   "repository": {
     "type": "git",
