--- a/application/package.json
+++ b/application/package.json
@@ -36,9 +36,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "eslint:recommended",
-      "plugin:react/recommended"
+      "react-app/jest"
     ],
     "rules": {
       "react/prop-types": 0
@@ -55,8 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint-plugin-react": "^7.30.1"
   }
 }
