--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "npm run build --prefix application",
-    "start": "start-server -s ./application/build"
+    "start": "start-server -s ./application/build",
+    "postinstall": "cd application && npm ci"
   },
   "repository": {
     "type": "git",
