--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "npm run build --prefix application",
-    "start": "start-server -s ./application/build",
-    "postinstall": "cd application && npm ci"
+    "start": "start-server -s ./application/build"
   },
   "repository": {
     "type": "git",
